--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="output.css">
+    <title>Knope for Constable</title>
 
-    <title>Hello, world!</title>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
+
+  <body class="container">
+
+<br> </br>
+
+    <div class="text-center">
+    <img src="leslie-knope.jpg" class="rounded" alt="Responsive image">
+  </div>
+
+  <div class="card text-center text-white bg-primary">
+    <div class="card-body">
+      <span style= "font-size:50px">Vote for Knope for Fayette County Constable</span>
+    </div>
+  </div>
+
+    <h1>Leslie Knope</h1>
+
 
     <p> testing testing testing</p>
-    
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
