adds instructions to readme and content to site

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
   <body class="container">
 
-<br> </br>
+    <div class="card text-center text-white bg-danger">
+      <div class="card-body">
+        <span style= "font-size:50px">Vote Knope on November 6, 2018</span>
+      </div>
+    </div>
 
     <div class="text-center">
     <img src="leslie-knope.jpg" class="rounded" alt="Responsive image">
@@ -20,14 +24,77 @@
 
   <div class="card text-center text-white bg-primary">
     <div class="card-body">
-      <span style= "font-size:50px">Vote for Knope for Fayette County Constable</span>
+      <span style= "font-size:50px">Leslie Knope for Fayette County Constable</span>
     </div>
   </div>
 
-    <h1>Leslie Knope</h1>
+<br> </br>
+
+    <h1>About Leslie</h1>
 
 
-    <p> testing testing testing</p>
+    <p class="container">For years, Leslie Knope has served the city of Pawnee,
+      Indiana as Deputy Director of the Parks Department. She, her husband, Ben,
+      and their triplets moved to Lexington 3 years ago. She enjoys work, waffles,
+      and talking on the phone 8 times a day with her best friend, Ann.
+    </p>
+
+    <p class = "container">
+      Since moving to the great city of Lexington she has felt compelled to serve.
+      She truly believes that government is by the people for the people. Her
+      experience with the Parks Department in Pawnee and eagerness to serve
+      make her the best candidate for the position of Constable.
+    </p>
+
+<br></br>
+
+    <h1>The Issues:</h1>
+
+    <div class="card text-left">
+  <div class="card-header">
+    Overreach
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Keeping Fayette County in control of Fayette County</h5>
+    <p class="card-text">Leslie is no stranger to the impact of police overreach.
+    Her experience in the Pawnee Parks Department brought her in close contact
+    with how overreach can negatively impact a community. Neighboring town Eagleton
+    consistently tried to influence the goings on of Pawnee and Knope was able to
+    minimize the impact. Knope will ensure that surrounding counties will stay out of
+    of Fayette County's way.</p>
+    <a href="#" class="btn btn-primary">Read More</a>
+  </div>
+
+  <div class="card text-left">
+    <div class="card-header">
+      Safety First
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Parks for everyone</h5>
+  <p class="card-text">Leslie's first love will always be Parks. There is no way to
+  deny that our great city is enduring an unparalled Parks crisis. Thieves and
+  criminals are running amock and their shenanigans are ruining local parks
+  for the common folk. Knope promises to clean up the parks in Lexington and
+  give them back to the fine citizens of Lexington.
+  </p>
+  <a href="#" class="btn btn-primary">Read More</a>
+</div>
+
+  <div class="card text-left">
+    <div class="card-header">
+      Waffles
+    </div>
+    <div class="card-body">
+    <h5 class="card-title">Waffles for All</h5>
+    <p class="card-text">Leslie believes, as all good Americans do, that breakfast
+    is the most important meal of the day. And, because of that, she is willing
+    to go the extra mile and declare every Wednesday "Waffle Wednesday". Local
+    diners and restaurants are required to make their waffles free and open to <thead>
+    public.
+    </thead>
+    </p>
+    <a href="#" class="btn btn-primary">More Deliciousness</a>
+  </div>
 
 
     <!-- Optional JavaScript -->
