--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <p class="container">For years, Leslie Knope has served the city of Pawnee,
       Indiana as Deputy Director of the Parks Department. She, her husband, Ben,
       and their triplets moved to Lexington 3 years ago. She enjoys work, waffles,
-      and talking on the phone 8 times a day with her best friend, Ann.
+      and talking on the phone approximately 8 times a day with her best friend, Ann.
     </p>
 
     <p class = "container">
@@ -95,6 +95,26 @@
     </p>
     <a href="#" class="btn btn-primary">More Deliciousness</a>
   </div>
+</div>
+</div>
+
+<br> </br>
+<div>
+  <div class="card">
+  <div class="card-header">
+    A Word from Leslie
+  </div>
+  <div class="card-body">
+    <blockquote class="blockquote mb-0">
+      <p>"I stand by my decision to avoid salad and other disgusting things."</p>
+      <footer class="blockquote-footer">Leslie Knope</footer>
+    </blockquote>
+  </div>
+</div>
+
+<div class="text-center">
+  <p><span style= "font-size:15px">Paid for by Knope for Constable</span></p>
+</div>
 
 
     <!-- Optional JavaScript -->
