--- a/index.html
+++ b/index.html
@@ -50,37 +50,39 @@
 
     <h1>The Issues:</h1>
 
-    <div class="card text-left">
-  <div class="card-header">
-    Overreach
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">Keeping Fayette County in control of Fayette County</h5>
-    <p class="card-text">Leslie is no stranger to the impact of police overreach.
-    Her experience in the Pawnee Parks Department brought her in close contact
-    with how overreach can negatively impact a community. Neighboring town Eagleton
-    consistently tried to influence the goings on of Pawnee and Knope was able to
-    minimize the impact. Knope will ensure that surrounding counties will stay out of
-    of Fayette County's way.</p>
-    <a href="#" class="btn btn-primary">Read More</a>
-  </div>
+      <div class="card text-left mb-2">
+        <div class="card-header">
+          Overreach
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Keeping Fayette County in control of Fayette County</h5>
+            <p class="card-text">Leslie is no stranger to the impact of police overreach.
+              Her experience in the Pawnee Parks Department brought her in close contact
+              with how overreach can negatively impact a community. Neighboring town Eagleton
+              consistently tried to influence the goings on of Pawnee and Knope was able to
+              minimize the impact. Knope will ensure that surrounding counties will stay out of
+              of Fayette County's way.</p>
+              <a href="#" class="btn btn-primary">Read More</a>
+          </div>
+      </div>
 
-  <div class="card text-left">
-    <div class="card-header">
-      Safety First
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">Parks for everyone</h5>
-  <p class="card-text">Leslie's first love will always be Parks. There is no way to
-  deny that our great city is enduring an unparalled Parks crisis. Thieves and
-  criminals are running amock and their shenanigans are ruining local parks
-  for the common folk. Knope promises to clean up the parks in Lexington and
-  give them back to the fine citizens of Lexington.
-  </p>
-  <a href="#" class="btn btn-primary">Read More</a>
-</div>
+      <div class="card text-left mb-2">
+        <div class="card-header">
+          Safety First
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Parks for everyone</h5>
+            <p class="card-text">Leslie's first love will always be Parks. There is no way to
+              deny that our great city is enduring an unparalled Parks crisis. Thieves and
+              criminals are running amock and their shenanigans are ruining local parks
+              for the common folk. Knope promises to clean up the parks in Lexington and
+              give them back to the fine citizens of Lexington.
+            </p>
+            <a href="#" class="btn btn-primary">Read More</a>
+        </div>
+      </div>
 
-  <div class="card text-left">
+  <div class="card text-left mb-2">
     <div class="card-header">
       Waffles
     </div>
@@ -96,20 +98,32 @@
     <a href="#" class="btn btn-primary">More Deliciousness</a>
   </div>
 </div>
-</div>
 
 <br> </br>
-<div>
-  <div class="card">
-  <div class="card-header">
-    A Word from Leslie
-  </div>
-  <div class="card-body">
+
+<div class="row">
+  <div class="col-8"></div>
+  <div class="card mb-2">
+    <div class="card-header">
+      A word from Leslie:
+    </div>
+    <div class="card-body">
     <blockquote class="blockquote mb-0">
       <p>"I stand by my decision to avoid salad and other disgusting things."</p>
-      <footer class="blockquote-footer">Leslie Knope</footer>
+        <footer class="blockquote-footer">Leslie Knope</footer>
     </blockquote>
   </div>
+</div>
+  <div class="col-4"></div>
+  <div class="card">
+    <div class="card-header">
+      Your vote is your voice.
+    </div>
+      <div class="card-body">
+        <div><a href="https://www.rockthevote.org/register-to-vote/?source=googlevr1gen&gclid=CjwKCAjw85zdBRB6EiwAov3Rin7Se5uOHHYK2ESp9L-2RNYI_Ug9j-GJw8TQqvaRwLPoJqjultVQtxoCaXYQAvD_BwE" class="btn btn-primary active" role="button" aria-pressed="true">Register to Vote Here</a></div>
+    </div>
+  </div>
+</div>
 </div>
 
 <div class="text-center">
