--- a/index.html
+++ b/index.html
@@ -10,25 +10,29 @@
 
   </head>
 
-  <body class="container">
+    <body class="container">
 
-    <div class="card text-center text-white bg-danger">
-      <div class="card-body">
-        <span style= "font-size:50px">Vote Knope on November 6, 2018</span>
+      <div class="card text-center text-white bg-danger">
+        <div class="card-body">
+          <span style= "font-size:50px">Vote Knope on November 6, 2018</span>
+        </div>
       </div>
-    </div>
 
-    <div class="text-center">
-    <img src="leslie-knope.jpg" class="rounded" alt="Responsive image">
-  </div>
+      <!--<div class="jumbotron jumbotron-fluid bg-danger mb-0 text-white text-center">
+        <div class="container">
+          <h1 class="display-4">Knope for Fayette County Constable</h1>
+        </div>
+      </div>-->
 
-  <div class="card text-center text-white bg-primary">
-    <div class="card-body">
-      <span style= "font-size:50px">Leslie Knope for Fayette County Constable</span>
-    </div>
-  </div>
+      <div class="container text-center">
+        <img src="leslie-knope.jpg" class="rounded" alt="Responsive image" style="padding-left: 0px;  padding-right: 0px;">
+      </div>
 
-<br> </br>
+      <div class="card text-center text-white bg-primary mb-3">
+        <div class="card-body">
+          <span style= "font-size:50px">Knope for Fayette County Constable</span>
+        </div>
+      </div>
 
     <h1>About Leslie</h1>
 
@@ -46,84 +50,94 @@
       make her the best candidate for the position of Constable.
     </p>
 
-<br></br>
+<br>
 
     <h1>The Issues:</h1>
 
-      <div class="card text-left mb-2">
-        <div class="card-header">
-          Overreach
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">Keeping Fayette County in control of Fayette County</h5>
-            <p class="card-text">Leslie is no stranger to the impact of police overreach.
+  <div class="container">
+      <div class="row">
+        <div class="col">
+        <div class="card text-left mb-2">
+          <div class="card-header bg-primary text-white">
+            Overreach
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Keeping Fayette County in control of Fayette County</h5>
+              <p class="card-text">Leslie is no stranger to the impact of police overreach.
               Her experience in the Pawnee Parks Department brought her in close contact
               with how overreach can negatively impact a community. Neighboring town Eagleton
               consistently tried to influence the goings on of Pawnee and Knope was able to
               minimize the impact. Knope will ensure that surrounding counties will stay out of
               of Fayette County's way.</p>
-              <a href="#" class="btn btn-primary">Read More</a>
+              <a href="#" class="btn btn-danger">Read More</a>
           </div>
+        </div>
       </div>
 
-      <div class="card text-left mb-2">
-        <div class="card-header">
-          Safety First
+      <div class="col">
+        <div class="card text-left mb-2">
+          <div class="card-header bg-primary text-white">
+            Safety First
         </div>
-        <div class="card-body">
-          <h5 class="card-title">Parks for everyone</h5>
-            <p class="card-text">Leslie's first love will always be Parks. There is no way to
+          <div class="card-body">
+            <h5 class="card-title">Parks for everyone</h5>
+              <p class="card-text">Leslie's first love will always be Parks. There is no way to
               deny that our great city is enduring an unparalled Parks crisis. Thieves and
               criminals are running amock and their shenanigans are ruining local parks
               for the common folk. Knope promises to clean up the parks in Lexington and
               give them back to the fine citizens of Lexington.
-            </p>
-            <a href="#" class="btn btn-primary">Read More</a>
+              </p>
+              <a href="#" class="btn btn-danger">Read More</a>
+          </div>
         </div>
       </div>
 
-  <div class="card text-left mb-2">
-    <div class="card-header">
-      Waffles
+      <div class="col">
+        <div class="card text-left mb-2">
+          <div class="card-header bg-primary text-white">
+            Waffles
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Waffles for All</h5>
+              <p class="card-text">Leslie believes, as all good Americans do, that breakfast
+                is the most important meal of the day. And, because of that, she is willing
+                to go the extra mile and declare every Wednesday "Waffle Wednesday". Local
+                diners and restaurants are required to make their waffles free and open to
+                public.
+              </p>
+              <a href="#" class="btn btn-danger">More Deliciousness</a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="card-body">
-    <h5 class="card-title">Waffles for All</h5>
-    <p class="card-text">Leslie believes, as all good Americans do, that breakfast
-    is the most important meal of the day. And, because of that, she is willing
-    to go the extra mile and declare every Wednesday "Waffle Wednesday". Local
-    diners and restaurants are required to make their waffles free and open to <thead>
-    public.
-    </thead>
-    </p>
-    <a href="#" class="btn btn-primary">More Deliciousness</a>
   </div>
-</div>
 
-<br> </br>
+<br>
 
 <div class="row">
-  <div class="col-8"></div>
-  <div class="card mb-2">
-    <div class="card-header">
-      A word from Leslie:
+  <div class="col-sm-8">
+  <div class="card">
+    <div class="card-header bg-primary text-white">
+      Leslie's Quote Corner
     </div>
     <div class="card-body">
-    <blockquote class="blockquote mb-0">
-      <p>"I stand by my decision to avoid salad and other disgusting things."</p>
+      <blockquote class="blockquote mb-0">
+        <p>"I stand by my decision to avoid salad and other disgusting things."</p>
         <footer class="blockquote-footer">Leslie Knope</footer>
-    </blockquote>
+      </blockquote>
   </div>
 </div>
-  <div class="col-4"></div>
+</div>
+  <div class="col-sm-4">
   <div class="card">
-    <div class="card-header">
+    <div class="card-header bg-primary text-white">
       Your vote is your voice.
     </div>
       <div class="card-body">
-        <div><a href="https://www.rockthevote.org/register-to-vote/?source=googlevr1gen&gclid=CjwKCAjw85zdBRB6EiwAov3Rin7Se5uOHHYK2ESp9L-2RNYI_Ug9j-GJw8TQqvaRwLPoJqjultVQtxoCaXYQAvD_BwE" class="btn btn-primary active" role="button" aria-pressed="true">Register to Vote Here</a></div>
+        <div><a href="https://www.usa.gov/register-to-vote" target="_blank" class="btn btn-danger active" role="button" aria-pressed="true">Register to Vote Here</a></div>
+      </div>
     </div>
   </div>
-</div>
 </div>
 
 <div class="text-center">
@@ -136,5 +150,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
   </body>
 </html>
