changes picture and about layout

--- a/index.html
+++ b/index.html
@@ -24,9 +24,48 @@
         </div>
       </div>-->
 
-      <div class="container text-center">
-        <img src="leslie-knope.jpg" class="rounded" alt="Responsive image" style="padding-left: 0px;  padding-right: 0px;">
+    <div class="row">
+      <div class="col">
+        <div class="container">
+        <img src="leslie-knope.jpg" class="rounded" alt="Responsive image">
       </div>
+    </div>
+
+    <div class="col ml-0 mb-0">
+      <div class="card ml-0 mb-0">
+        <div class="card-header">
+          About Leslie
+        </div>
+          <div class="card-body">
+            <div class="card-text">
+                For years, Leslie Knope has served the city of Pawnee,
+                Indiana as Deputy Director of the Parks Department. She, her husband, Ben,
+                and their triplets moved to Lexington 3 years ago. She enjoys work, waffles,
+                and talking on the phone approximately 8 times a day with her best friend, Ann.
+                <br>
+                <br>
+                Since moving to the great city of Lexington she has felt compelled to serve.
+                She truly believes that government is by the people for the people. Her
+                experience with the Parks Department in Pawnee and eagerness to serve
+                make her the best candidate for the position of Constable.
+
+      <!--  <p>For years, Leslie Knope has served the city of Pawnee,
+          Indiana as Deputy Director of the Parks Department. She, her husband, Ben,
+          and their triplets moved to Lexington 3 years ago. She enjoys work, waffles,
+          and talking on the phone approximately 8 times a day with her best friend, Ann.
+        </p>
+
+        <p>
+          Since moving to the great city of Lexington she has felt compelled to serve.
+          She truly believes that government is by the people for the people. Her
+          experience with the Parks Department in Pawnee and eagerness to serve
+          make her the best candidate for the position of Constable.
+        </p>-->
+    </div>
+  </div>
+</div>
+</div>
+</div>
 
       <div class="card text-center text-white bg-primary mb-3">
         <div class="card-body">
@@ -34,7 +73,7 @@
         </div>
       </div>
 
-    <h1>About Leslie</h1>
+    <!--<h1>About Leslie</h1>
 
 
     <p class="container">For years, Leslie Knope has served the city of Pawnee,
@@ -50,7 +89,7 @@
       make her the best candidate for the position of Constable.
     </p>
 
-<br>
+<br>-->
 
     <h1>The Issues:</h1>
 
